Fixed overflow issue not being triggered

--- a/src/WebComponents/Overflow/overflow.scss
+++ b/src/WebComponents/Overflow/overflow.scss
@@ -7,9 +7,13 @@
     @include layout-horizontal();
     @include relative();
 
-    #visible {
-        position: relative;
+    #visibleContainer {
         overflow: hidden;
+    }
+
+    #visible {
+        @include layout-inline();
+        position: relative;
 
         vi-size-tracker {
             z-index: -1;
